<resources>
    <string name="app_name">profilku</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nama">Rian setia aji</string>
    <string name="status">Mahasiswa</string>
    <string name="wa">+6287746502245</string>
    <string name="github">punyamu</string>
    <string name="ig">rian.setiaaji</string>
</resources>
